# python2mobile

./: .gitignore  README.md  netlify.toml
p2m-docs/: netlify.toml  package.json  (+1 more)
python2mobile/: .gitignore  README.md  pyproject.toml
python2mobile/docs/: ALL_PLATFORMS_GUIDE.md  API_DB_DOCUMENTATION.md  ARCHITECTURE.md  COMPLETE_SUMMARY.md  FINAL_REPORT.md  IMAGINE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  TEST_REPORT.md  USAGE_GUIDE.md  VALIDATION_GUIDE.md
python2mobile/examples/: example_ecommerce_app.py  example_todo_app.py
python2mobile/p2m/: __init__.py  cli.py  config.py
python2mobile/p2m/core/: __init__.py  api.py  ast_walker.py  database.py  events.py  render_engine.py  runtime.py  state.py  validator.py
python2mobile/p2m/devserver/: __init__.py  server.py
python2mobile/p2m/i18n/: __init__.py  translator.py
python2mobile/p2m/imagine/: __init__.py  agent.py  design_validator.py  legacy.py
python2mobile/p2m/llm/: __init__.py  anthropic_provider.py  base.py  compatible_provider.py  factory.py  ollama_provider.py  openai_provider.py
python2mobile/p2m/native/: __init__.py  base.py  biometrics.py  bluetooth.py  camera.py  in_app_purchase.py  location.py  map.py  push_notifications.py  secure_storage.py  sensors.py  share.py
python2mobile/p2m/testing/: __init__.py
python2mobile/p2m/ui/: __init__.py  components.py
python2mobile/tests/: test_basic_engine.py  test_build_generation.py  test_build_test_gate.py  test_carousel_modal.py  test_config_system.py  test_i18n.py  test_ifood_app_integration.py  test_imagine_cli.py  test_imagine_command.py  test_llm_providers.py  test_new_apps_integration.py  test_ollama_functional.py  test_real_world_apps.py  test_run_integration.py
(+84 files in other folders)
