[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python2mobile"
version = "0.1.0"
description = "Python to Mobile - Write mobile apps in pure Python with DSL"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "P2M Team", email = "team@python2mobile.dev"}
]
keywords = ["mobile", "python", "dsl", "flutter", "react-native", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "click>=8.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "watchdog>=3.0.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "toml>=0.10.0",
    "websockets>=12.0",
    "agno>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
p2m = "p2m.cli:main"

[tool.setuptools.packages.find]
where = ["."]     # scan relative to python2mobile/ — finds p2m and all sub-packages automatically

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
